basic grid layou

--- a/index.html
+++ b/index.html
@@ -7,5 +7,12 @@
     <title>FCC Technical Documentation Page</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <nav id="navbar">
+        <h1>JavaScript Documentation</h1>
+      </nav>
+      <main id="main-doc"></main>
+    </div>
+  </body>
 </html>
